test/data/syntax-errors/unbalanced-parentheses.roo
#print("hello world"
#x = 2 * (1 + 2